# FAR-GF-RC

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
checkpoints/: README.md
configs/ablations/: metr_la_far_gf_rc_ablation_protocol_v1.json
configs/dropout/: pems_bay_controlled_sensor_dropout_protocol_v1.json
configs/experiments/: metr_la_far_gf_rc_config_v1.json  metr_la_far_gf_rc_training_protocol_v1.json  metr_la_far_gf_rc_training_protocol_v2.json  metr_la_masked_sensor_shared_gru_config.json  metr_la_masked_sensor_shared_tcn_config.json  metr_la_masked_sensor_shared_tcn_v2_config.json  pems_bay_far_gf_rc_config_v1.json  pems_bay_far_gf_rc_data_protocol_v1.json  pems_bay_far_gf_rc_training_protocol_v1.json  pems_bay_far_gf_rc_training_protocol_v2.json  pems_bay_final_evaluator_v1_static_hold_and_v2_supersession_record_v1.json  pems_bay_final_evaluator_v2_static_hold_and_v3_supersession_record_v1.json  pems_bay_final_evaluator_v3_runtime_hold_and_v4_dynamic_import_supersession_record_v1.json  pems_bay_final_multi_model_primary_evaluation_protocol_v1.json  (+6 more)
data/: README.md
docs/: data_protocol.md  model_formulation.md  reproduction.md
scripts/: _bootstrap.py  audit_data.py  build_figures.py  build_tables.py  download_data.py  evaluate.py  prepare_data.py  run_ablations.py  run_all.py  run_sensitivity.py  train.py  verify_release.py
tests/: test_elapsed_gap.py  test_metric_accumulators.py  test_model_shapes.py  test_training_masks.py
(+132 files in other folders)
