[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fargfrc"
version = "1.0.0"
description = "Failure-aware reliability-calibrated graph forecasting under controlled sensor dropout"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.26", "pandas>=2.0", "scipy>=1.11", "torch>=2.5",
  "h5py>=3.10", "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
